<resources>
    <string name="app_name">Spacetime</string>
    <string name="title_activity_maps">Place Map</string>
    <string name="title_activity_start">Place List</string>
    <string name="title_activity_reports">Place Reports</string>

    <string name="editplace_title">Edit place</string>

    <string name="editplace_name">Place name</string>
    <string name="editplace_address">Address</string>
    <string name="editplace_latitude">Latitude</string>
    <string name="editplace_longitude">Longitude</string>


    <string name="editplace_radius">Radius in meters (to count as within)</string>

    <string name="editplacelist_title">Edit place list</string>
    <string name="editplacelist_title_new">New place list</string>
    <string name="editplacelist_name">List name</string>
    <string name="editplacelist_goal_hours">Goal hours per week</string>
    <string name="editplacelist_goal_weekdays">Day(s) of week</string>

    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>

    <string name="weekday_1">Sunday</string>
    <string name="weekday_2">Monday</string>
    <string name="weekday_3">Tuesday</string>
    <string name="weekday_4">Wednesday</string>
    <string name="weekday_5">Thursday</string>
    <string name="weekday_6">Friday</string>
    <string name="weekday_7">Saturday</string>

    <string name="report_status_in">In</string>
    <string name="report_status_out">Out</string>
    <string name="report_status_inconsistent">Data for %s appears to be inconsistent</string>

    <string name="report_total_duration">Total Duration in Period:</string>
    <string name="report_duration">Duration:</string>

    <string name="report_this_week">This week</string>
    <string name="report_last_week">Last week</string>
    <string name="report_this_month">This month</string>
    <string name="report_last_month">Last month</string>
    <string name="report_other_period">Other period…</string>
    <string name="report_list_total">Period list total:</string>

    <string name="report_select_start_date">Select report start date:</string>
    <string name="report_select_end_date">Select report end date:</string>

    <string name="bottom_nav_list">Place list</string>
    <string name="bottom_nav_map">Place map</string>
    <string name="bottom_nav_report">Reports</string>

    <string name="settings">Settings</string>
    <string name="locationQuestion">We need to use your location for this app to work at all</string>
    <string name="permission_denied_explanation">Unfortunatwly this app will not function properly without location permission</string>
    <string name="map">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_item_my_lists">My Lists</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_data_cleanup">Data Cleanup</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_header_place">Place parameters</string>
    <string name="pref_title_place_radius">Default radius (m)</string>
    <string name="pref_title_place_circle">Draw circle</string>
    <string name="pref_summary_place_circle">Draw circle at (radius) meters around place</string>
    <string name="pref_title_place_movable">Place movable</string>
    <string name="pref_summary_place_movable">The place position can be adjusted on map for better accuracy</string>

    <string name="pref_header_filtering">Data filtering</string>
    <string name="pref_title_filtering_switch">Apply filter</string>
    <string name="pref_summary_filtering_switch">Apply a filter for presence dropouts or use raw data as it was collected</string>

    <string name="pref_title_filtering_dropout">Maximum place dropout time (minutes)</string>

    <string name="pref_header_persistence">Data retention</string>
    <string name="pref_title_persistence_switch">Auto delete old data</string>
    <string name="pref_summary_persistence_switch">Delete data older than a certain number of days</string>

    <string name="pref_title_persistence_lifetime">Data lifetime</string>

    <string name="pref_header_reporting">Reporting</string>
    <string name="pref_title_reporting_period">Default period for reports</string>

    <string-array name="list_reporting_period_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_reporting_period_entries">
        <item>@string/report_this_week</item>
        <item>@string/report_last_week</item>
        <item>@string/report_this_month</item>
        <item>@string/report_last_month</item>
    </string-array>

    <string name="pref_title_reporting_inconsistent_switch">Show inconsistent data</string>
    <string name="pref_summary_reporting_inconsistent_switch">Show data that appears impossible or otherwise inconsistent</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>

</resources>
