<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="place_draw_circle_switch"
        android:summary="@string/pref_summary_place_circle"
        android:title="@string/pref_title_place_circle" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="place_movable_switch"
        android:summary="@string/pref_summary_place_movable"
        android:title="@string/pref_title_place_movable" />

    <EditTextPreference
        android:defaultValue="80"
        android:inputType="numberDecimal"
        android:key="place_radius"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_place_radius" />

</PreferenceScreen>
