<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_reporting_period_entries"
        android:entryValues="@array/list_reporting_period_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_reporting_period" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="inconsistent_data_switch"
        android:summary="@string/pref_summary_reporting_inconsistent_switch"
        android:title="@string/pref_title_reporting_inconsistent_switch" />


</PreferenceScreen>
